first website commit

--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
         <h3>I'm <strong>Kelsey Pawelek</strong>, a Biologist at the University of Texas.</h3>
         <h3>I am aspiring to be a Physician's Assistant.</h3>
         <h3>If you are interested, look at my working <a href="./projects/"> projects</a>.</h3>
-        <h3>For more, check out my academic &amp; professional <a href="https://demo.nurlan.co/hugo-vitae/">resume</a>.</h3>
-        <h3>Contact me by <a href="mailto:kelseypawelek@yahoo.com">email</a>.</h3>
+        <h3>For more, check out my academic &amp; professional <a href="./resume/">resume</a>.</h3>
+        <h3>Please contact me by <a href="mailto:kelseypawelek@yahoo.com">email</a>.</h3>
         <div class="social">
   <ul class="social-links">
     
